# rmq_tmds_glyph_engine

./: .gitignore  .gitmodules  BOOTSTRAP.md  LICENSE.md  Makefile  NOTES.md  NOTICE.md  README.md  TODO.md  rmq_tmds_glyph_engine.gprj
aux/: active_low_button_pulse.v  keypad_matrix_scanner.v  tang_primer_debug_keypad_io.v  text_mode_status_tracker.v  text_mode_uart_debug_dump.v  uart_rx.v  uart_text_cursor_console.v  uart_tx.v
build_system/: README.md  build-system.bat  build-system.ps1  build-system.sh  create-venv.bat  create-venv.ps1  create-venv.sh  tooling.json  tooling.template.json
build_system/python/: pyproject.toml
build_system/python/src/rmq_tmds_build/: actions.py  cli.py  config.py  default_project.py  host.py  paths.py  project_config.py  project_discovery.py  project_resolver.py  project_workspace.py  prompt_config.py  targets.py  tool_discovery.py  tui.py  validation.py  wsl2_ftdi.py
build_system/python/tests/: test_cli.py  test_config.py  test_default_project.py  test_project_config.py  test_project_discovery.py  test_project_resolver.py  test_project_workspace.py  test_tool_discovery.py
core/: cp437_font_rom.v  display_signal.v  text_cell_bram.v  text_frame_ctrl.v  text_init_writer.v  text_mode_source.v  text_plane.v  text_snapshot_loader.v  tmds_encoder.v  vga16_palette.v
impl/: rmq_tmds_glyph_engine_process_config.json
resources/: boards.json  cp437_8x16.mem  cp437_8x16.mi  tasks.template.json
scripts/: build_gowin.sh  build_vivado.sh  check_usb_serial_wsl.sh  common.sh  gen_font_module.py  lint_verilator.sh  oss_cad_gowin_probe.sh  (+4 more)
(+67 files in other folders)
