[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rmq-tmds-build"
version = "0.1.0"
description = "Python-first build and deployment scaffold for rmq_tmds_glyph_engine"
requires-python = ">=3.10"
dependencies = ["pyserial>=3.5,<4"]

[project.optional-dependencies]
tui = ["textual>=0.60,<1.0"]

[project.scripts]
rmq-tmds-build = "rmq_tmds_build.cli:main"
rmq-tmds-build-tui = "rmq_tmds_build.tui:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
